--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
 		</div>
 	</div>
 	 //testimonials -->
+
 	<!--  gallery -->
 	<div data-target="gallery" id="gallery">
 		<div class="container">
@@ -205,7 +206,7 @@
 					<li class="active" data-filter="all" data-aos="slide-down">show all</li>
 					<li data-filter="1" data-aos="slide-down">Wild</li>
 					<li data-filter="2" data-aos="slide-down">Landscapes</li>
-					<li data-filter="3" data-aos="slide-down">Personal</li>
+					<li data-filter="3" data-aos="slide-down">People</li>
 				</ul>
 				<div class="scrollbar agileits-portfolio-scroll">
 					<div class="filtr-container">
