--- a/index.html
+++ b/index.html
@@ -556,8 +556,8 @@
 					<ul class="list2">
 						<li>Quick Contact</li>
 						<li><span class="fa fa-envelope-o" aria-hidden="true"></span><a
-								href="mailto:yourmailid@company.com">service@my photos.com</a></li>
-						<li><span class="fa fa-volume-control-phone" aria-hidden="true"></span>1254-209-4652</li>
+								href="mailto:yourmailid@company.com">info@chackosmedia.ca</a></li>
+						<li><span class="fa fa-volume-control-phone" aria-hidden="true"></span>403-915-3916</li>
 					</ul>
 				</div>
 			</div>
