colored changed to black

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 								</figure>
 							</a>
 						</div>
-						<div class="filtr-item" data-category="3, 2" data-sort="Industrial site">
+						<div class="filtr-item" data-category="3" data-sort="Industrial site">
 							<a href="images/l1.jpg" class="b-link-stripe b-animate-go  thickbox">
 								<figure class="w3ls-gallery box">
 									<img src="images/l1.jpg" class="img-responsive" alt=" " />
@@ -298,6 +298,7 @@
 								</figure>
 							</a>
 						</div>
+
 						<div class="clearfix"> </div>
 					</div>
 				</div>
@@ -537,19 +538,22 @@
 		<div class="footer">
 			<div class="container">
 				<div class="menu">
-					<ul class="list">
+					<!-- <ul class="list">
 						<li><a class="scroll" href="#home">Home</a></li>
 						<li><a class="scroll" href="#about">About</a></li>
 						<li><a class="scroll" href="#gallery">Gallery</a></li>
 						<li><a class="scroll" href="#service">Services</a></li>
 						<li><a class="scroll" href="#contact">Contact</a></li>
-					</ul>
+					</ul> -->
 					<ul class="list-icons">
-						<li><a href="#"><span class="fa fa-facebook"></span></a></li>
-						<li><a href="#"><span class="fa fa-twitter"></span></a></li>
-						<li><a href="#"><span class="fa fa-google-plus"></span></a></li>
-						<li><a href="#"><span class="fa fa-pinterest-p"></span></a></li>
-						<li><a href="#"><span class="fa fa-vk"></span></a></li>
+						<li><a href="https://www.facebook.com/jose.pchacko.5"><span class="fa fa-facebook"></span></a>
+						</li>
+						<li><a href="https://www.instagram.com/chackosmedia/"><span class="fa fa-instagram"></span></a>
+						</li>
+						<li><a href="https://www.linkedin.com/in/jose-p-chacko-7a139b234/"><span
+									class="fa fa-linkedin"></span></a></li>
+						<!-- <li><a href="#"><span class="fa fa-pinterest-p"></span></a></li>
+						<li><a href="#"><span class="fa fa-vk"></span></a></li> -->
 					</ul>
 				</div>
 				<div class="menu1">
