--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 				<h3 class="center">Latest Works</h3>
 				<ul class="simplefilter">
 					<li class="active" data-filter="all" data-aos="slide-down">show all</li>
-					<li data-filter="1" data-aos="slide-down">Wild</li>
+					<!-- <li data-filter="1" data-aos="slide-down">Wild</li> -->
 					<li data-filter="2" data-aos="slide-down">Landscapes</li>
 					<li data-filter="3" data-aos="slide-down">People</li>
 				</ul>
@@ -315,99 +315,15 @@
 					<img src="images/c1.jpg" alt="service-img" class="img-responsive" />
 				</div>
 				<div class="service-list">
-					<h3>Our Services</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit incididunt.</p>
+					<h3>Services</h3>
+					<p></p>
 					<a href="#contact" class="scroll">Request Service</a>
 					<div class="service-box1">
-						<div class="box1">
-							<h5>Birthday Photography</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing</p>
-							<a href="#" data-toggle="modal" data-target="#myModal1">View Details</a>
-							<!-- bootstrap-pop-up -->
-							<div class="modal video-modal fade" id="myModal1" tabindex="-1" role="dialog">
-								<div class="modal-dialog" role="document">
-									<div class="modal-content">
-										<div class="modal-header">
-											my photos
-											<button type="button" class="close" data-dismiss="modal"
-												aria-label="Close"><span aria-hidden="true">&times;</span></button>
-										</div>
-										<section>
-											<div class="modal-body">
-												<img src="images/j.jpg" alt=" " class="img-responsive" />
-												<p>It is a long established fact that a reader will be distracted by the
-													readable content of a page when looking at its layout. The point of
-													using Lorem Ipsum is that it has a more-or-less normal distribution
-													of letters, as opposed to using 'Content here, content here', making
-													it look like readable English.</p>
-											</div>
-										</section>
-									</div>
-								</div>
-							</div>
-							<!-- //bootstrap-pop-up -->
-						</div>
-						<div class="box1">
-							<h5>Marriage Photography</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing</p>
-							<a href="#" data-toggle="modal" data-target="#myModal2">View Details</a>
-							<!-- bootstrap-pop-up -->
-							<div class="modal video-modal fade" id="myModal2" tabindex="-1" role="dialog">
-								<div class="modal-dialog" role="document">
-									<div class="modal-content">
-										<div class="modal-header">
-											my photos
-											<button type="button" class="close" data-dismiss="modal"
-												aria-label="Close"><span aria-hidden="true">&times;</span></button>
-										</div>
-										<section>
-											<div class="modal-body">
-												<img src="images/j.jpg" alt=" " class="img-responsive" />
-												<p>It is a long established fact that a reader will be distracted by the
-													readable content of a page when looking at its layout. The point of
-													using Lorem Ipsum is that it has a more-or-less normal distribution
-													of letters, as opposed to using 'Content here, content here', making
-													it look like readable English.</p>
-											</div>
-										</section>
-									</div>
-								</div>
-							</div>
-							<!-- //bootstrap-pop-up -->
-						</div>
 					</div>
 					<div class="service-box2">
 						<div class="box1">
-							<h5>Wild Photography</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing</p>
-							<a href="#" data-toggle="modal" data-target="#myModal3">View Details</a>
-							<!-- bootstrap-pop-up -->
-							<div class="modal video-modal fade" id="myModal3" tabindex="-1" role="dialog">
-								<div class="modal-dialog" role="document">
-									<div class="modal-content">
-										<div class="modal-header">
-											my photos
-											<button type="button" class="close" data-dismiss="modal"
-												aria-label="Close"><span aria-hidden="true">&times;</span></button>
-										</div>
-										<section>
-											<div class="modal-body">
-												<img src="images/j.jpg" alt=" " class="img-responsive" />
-												<p>It is a long established fact that a reader will be distracted by the
-													readable content of a page when looking at its layout. The point of
-													using Lorem Ipsum is that it has a more-or-less normal distribution
-													of letters, as opposed to using 'Content here, content here', making
-													it look like readable English.</p>
-											</div>
-										</section>
-									</div>
-								</div>
-							</div>
-							<!-- //bootstrap-pop-up -->
-						</div>
-						<div class="box1">
 							<h5>Fashion Photography</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing</p>
+							<p></p>
 							<a href="#" data-toggle="modal" data-target="#myModal4">View Details</a>
 							<!-- bootstrap-pop-up -->
 							<div class="modal video-modal fade" id="myModal4" tabindex="-1" role="dialog">
@@ -437,7 +353,7 @@
 					<div class="service-box3">
 						<div class="box1">
 							<h5>Events Photography</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing</p>
+							<p></p>
 							<a href="#" data-toggle="modal" data-target="#myModal5">View Details</a>
 							<!-- bootstrap-pop-up -->
 							<div class="modal video-modal fade" id="myModal5" tabindex="-1" role="dialog">
@@ -465,7 +381,7 @@
 						</div>
 						<div class="box1">
 							<h5>Personal Photography</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing</p>
+							<p></p>
 							<a href="#" data-toggle="modal" data-target="#myModal6">View Details</a>
 							<!-- bootstrap-pop-up -->
 							<div class="modal video-modal fade" id="myModal6" tabindex="-1" role="dialog">
